# OndeVale

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  render.yaml
artifacts/data/: domain.geojson  domain.json  preprocess_metadata.json  sales_price_m2_geographic_baseline.csv
artifacts/experiments/: best_models.json  knn_cv_results.csv
artifacts/models/: knn_price_m2_baseline.joblib  knn_price_m2_baseline.json
artifacts/reports/: baseline_report.md
artifacts/stats/: data_quality_report.json  dataset_summary.json  missing_values.csv  negotiation_type_distribution.csv  price_m2_summary.json  sale_summary.json  stats_report.md
backend/: app.py  schemas.py  services.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css  vite-env.d.ts
frontend/src/components/: MapView.vue  PredictionPanel.vue  StartupScreen.vue
frontend/src/services/: predictionService.ts  startupService.ts
frontend/src/stores/: predictionStore.ts
frontend/src/views/: HomeView.vue
report/: report_OndeVale.aux  report_OndeVale.out  report_OndeVale.tex
report/svg-inkscape/: ita-logo_svg-tex.pdf_tex
src/: clean.py  config.py  dev.py  experiments.py  preprocess.py  report.py  stats.py  train.py  validation.py
tests/: test_validation.py
