[project]
name = "ondevale"
version = "0.1.0"
description = "Geographic KNN baseline for estimating real-estate price per square meter."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "joblib>=1.5,<2.0",
    "matplotlib>=3.9,<4.0",
    "numpy>=2.0,<3.0",
    "pandas>=2.2,<3.0",
    "pyproj>=3.7,<4.0",
    "scikit-learn>=1.5,<2.0",
    "uvicorn>=0.30,<1.0",
]
